--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img/baliho.jpeg"  alt="...">
+          <img src="img/baliho.jpeg" width="100%"  alt="...">
         </div>
       </div>
     </div>
