--- a/index.html
+++ b/index.html
@@ -63,7 +63,31 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="img/pamflet/1.jpeg" class="d-block w-100" alt="...">
+              <img src="img/Pamflet/8.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="img/Pamflet/9.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="img/Pamflet/10.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="img/Pamflet/11.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="img/Pamflet/12.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="img/Pamflet/13.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="img/pamflet/14.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="img/Pamflet/15.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="img/Pamflet/1.jpeg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
               <img src="img/Pamflet/2.jpeg" class="d-block w-100" alt="...">
