--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <img src="img/Pamflet/13.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="img/pamflet/14.jpg" class="d-block w-100" alt="...">
+              <img src="img/Pamflet/14.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
               <img src="img/Pamflet/15.jpg" class="d-block w-100" alt="...">
