--- a/index.html
+++ b/index.html
@@ -74,9 +74,17 @@
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="15" aria-label="Slide 16"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="17" aria-label="Slide 18"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="19" aria-label="Slide 20"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="21" aria-label="Slide 22"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="23" aria-label="Slide 24"></button>
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
+              <img src="img/Pamflet/19.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="img/Pamflet/18.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
               <img src="img/Pamflet/17.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
