--- a/gallery.html
+++ b/gallery.html
@@ -54,6 +54,7 @@
           <img src="kegiatan/15.jpg">
           <img src="kegiatan/18.jpg">
           <img src="kegiatan/21.jpg">
+          <img src="kegiatan/24.jpg">
         </div>
         <div class="column">
         <img src="kegiatan/2.jpg">
@@ -77,6 +78,7 @@
           <img src="kegiatan/14.jpg">
           <img src="kegiatan/17.jpg">
           <img src="kegiatan/20.jpg">
+          <img src="kegiatan/23.jpg">
       </div>
     </div>
   </div>
