--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="img/Pamflet/19.jpg" class="d-block w-100" alt="...">
+              <img src="img/Pamflet/19.JPG" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
               <img src="img/Pamflet/18.jpg" class="d-block w-100" alt="...">
