--- a/index.html
+++ b/index.html
@@ -76,9 +76,19 @@
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="19" aria-label="Slide 20"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="21" aria-label="Slide 22"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="23" aria-label="Slide 24"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="25" aria-label="Slide 26"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="27" aria-label="Slide 28"></button>
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
+              <img src="img/Pamflet/20.jpeg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <video class="img-thumbnail" controls>
+                <source src="video/3.mp4" type="video/mp4">
+              </video>
+            </div>
+            <div class="carousel-item">
               <img src="img/Pamflet/19.JPG" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
