--- a/gallery.html
+++ b/gallery.html
@@ -55,6 +55,7 @@
           <img src="kegiatan/18.jpg">
           <img src="kegiatan/21.jpg">
           <img src="kegiatan/24.jpg">
+          <!-- sini -->
         </div>
         <div class="column">
         <img src="kegiatan/2.jpg">
@@ -68,6 +69,8 @@
           <img src="kegiatan/16.jpg">
           <img src="kegiatan/19.jpg">
           <img src="kegiatan/22.jpg">
+          <img src="kegiatan/25.jpg">
+
       </div>
       <div class="column">
         <img src="kegiatan/3.jpg">
@@ -79,6 +82,10 @@
           <img src="kegiatan/17.jpg">
           <img src="kegiatan/20.jpg">
           <img src="kegiatan/23.jpg">
+          <video class="img-thumbnail" controls>
+          <source src="video/3.mp4" type="video/mp4">
+        </video>
+
       </div>
     </div>
   </div>
