--- a/index.html
+++ b/index.html
@@ -78,10 +78,14 @@
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="23" aria-label="Slide 24"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="25" aria-label="Slide 26"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="27" aria-label="Slide 28"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="29" aria-label="Slide 30"></button>
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="img/Pamflet/20.jpeg" class="d-block w-100" alt="...">
+              <img src="img/Pamflet/21.jpeg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="img/Pamflet/20.png" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
               <video class="img-thumbnail" controls>
