--- a/gallery.html
+++ b/gallery.html
@@ -56,6 +56,8 @@
           <img src="kegiatan/21.jpg">
           <img src="kegiatan/24.jpg">
           <img src="kegiatan/26.jpg">
+          <img src="kegiatan/28.jpg">
+          <img src="kegiatan/31.jpg">
         </div>
         <div class="column">
           <img src="kegiatan/2.jpg">
@@ -70,6 +72,10 @@
           <img src="kegiatan/19.jpg">
           <img src="kegiatan/22.jpg">
           <img src="kegiatan/25.jpg">
+          <video class="img-thumbnail" controls>
+            <source src="video/4.mp4" type="video/mp4">
+          </video>
+          <img src="kegiatan/29.jpg">
           <!-- sini -->
           
       </div>
@@ -86,6 +92,9 @@
           <video class="img-thumbnail" controls>
           <source src="video/3.mp4" type="video/mp4">
         </video>
+        <img src="kegiatan/27.jpg">
+        <img src="kegiatan/30.jpg">
+        
 
       </div>
     </div>
