--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="video/5.mp4" class="d-block w-100" alt="...">
+              <video class="img-thumbnail" controls>
+                <source src="video/5.mp4" type="video/mp4">
+              </video>
             </div>
             <div class="carousel-item">
               <img src="img/Pamflet/24.jpeg" class="d-block w-100" alt="...">
