--- a/index.html
+++ b/index.html
@@ -83,9 +83,17 @@
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="32" aria-label="Slide 33"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="33" aria-label="Slide 34"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="35" aria-label="Slide 36"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="37" aria-label="Slide 38"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="39" aria-label="Slide 40"></button>
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
+                 <img src="img/Pamflet/26.jpeg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                 <img src="img/Pamflet/25.jpeg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
               <video class="img-thumbnail" controls>
                 <source src="video/5.mp4" type="video/mp4">
               </video>
