--- a/index.html
+++ b/index.html
@@ -85,9 +85,21 @@
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="35" aria-label="Slide 36"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="37" aria-label="Slide 38"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="39" aria-label="Slide 40"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="41" aria-label="Slide 42"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="43" aria-label="Slide 44"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="45" aria-label="Slide 46"></button>
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
+                 <img src="img/Pamflet/29.jpeg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                 <img src="img/Pamflet/28.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                 <img src="img/Pamflet/27.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
                  <img src="img/Pamflet/26.jpeg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
