--- a/index.html
+++ b/index.html
@@ -88,9 +88,13 @@
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="41" aria-label="Slide 42"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="43" aria-label="Slide 44"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="45" aria-label="Slide 46"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="47" aria-label="Slide 48"></button>
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
+                 <img src="img/Pamflet/30.jpeg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
                  <img src="img/Pamflet/29.jpeg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
