--- a/index.html
+++ b/index.html
@@ -90,9 +90,13 @@
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="45" aria-label="Slide 46"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="47" aria-label="Slide 48"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="49" aria-label="Slide 50"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="51" aria-label="Slide 52"></button>
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
+                 <img src="img/Pamflet/32.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
                  <img src="img/Pamflet/31.jpeg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
