--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
+                 <img src="img/Pamflet/33.jpeg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
                  <img src="img/Pamflet/32.png" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
